Adding size validation on DTOs input attributes